k8s/case1/plant-name-parser.d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-name-parser-d
  labels:
    environment: dev
    component: plant-name-parser-d
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      environment: dev
      component: plant-name-parser
  template:
    metadata:
      labels:
        environment: dev
        component: plant-name-parser
        test: example
      annotations:
        developer: Andrey G.
    spec:
      containers:
        - name: plant-name-parser
          image: aganyushkin/plant-name-parser-service:1.0.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
