k8s/case1/plant-name-parser.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: plant-name-parser
  labels:
    environment: qa
    component: plant-name-parser
  annotations:
    developer: Andrey G.
spec:
  containers:
    - name: plant-name-parser
      image: aganyushkin/plant-name-parser-service:1.0.1
      ports:
        - containerPort: 8080
      resources:
        limits:
          cpu: "1"
          memory: "1Gi"
        requests:
          cpu: "1"
          memory: "1Gi"
