k8s/case1/plant-name-parser.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plant-name-parser-service
  labels:
    environment: dev
    component: plant-name-parser-srv
spec:
  selector:
    environment: dev
    component: plant-name-parser
  ports:
    - protocol: TCP
      port: 5080
      targetPort: 8080
  type: LoadBalancer
