k8s/case1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seed-ing
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/parse
            pathType: Exact
            backend:
              service:
                name: plant-name-parser-service
                port:
                  number: 5080
